--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-native-snap-carousel": "^1.3.1",
     "react-router-dom": "^6.18.0",
+    "react-snap-carousel": "^0.3.2",
     "swiper": "^11.0.5",
     "yup": "^1.3.2"
   },
