--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.17",
     "@supabase/supabase-js": "^2.39.0",
+    "@vercel/speed-insights": "^1.0.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
