--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-native-snap-carousel": "^1.3.1",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.20.1",
     "react-snap-carousel": "^0.3.2",
+    "sort-by": "^1.2.0",
     "swiper": "^11.0.5",
     "yup": "^1.3.2"
   },
